修订: 重要配置内容 删除.

--- a/src/main/resources/pay.properties
+++ b/src/main/resources/pay.properties
@@ -1,4 +1,4 @@
-pay.param.key=13045680451sth55272134537148lrsq
-pay.param.appID=wx02126f2ce37b2633
-pay.param.mchID=1456255802
-pay.param.ip=123.57.224.170
+pay.param.key=
+pay.param.appID=
+pay.param.mchID=
+pay.param.ip=
